เสร็จสิ้นการคืนรางวัลให้ผู้เล่นได้และเกมส์สามารถคำนวณหาผู้ชนะได้
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.BackServices/TheS.Casinova.Colors.BackServices.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.BackServices/TheS.Casinova.Colors.BackServices.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackServices\BackExecutors\BetColorExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\CalculateGameRoundWinnerExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\CreateGameRoundConfigurationExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\CreateGameRoundExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\PayForColorsWinnerInfoExecutor.cs" />
