--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\BetCommand.cs" />
+    <Compile Include="Commands\CalculateGameRoundWinnerCommand.cs" />
     <Compile Include="Commands\CheckActiveRoundToCreateCommand.cs" />
     <Compile Include="Commands\CreateGameRoundConfigurationCommand.cs" />
     <Compile Include="Commands\CreateGameRoundCommand.cs" />
