--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.Commands/TheS.Casinova.TwoWins.Commands.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.Commands/TheS.Casinova.TwoWins.Commands.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CalculateGameRoundWinnerCommand.cs" />
     <Compile Include="Commands\ChangeBetInfoCommand.cs" />
     <Compile Include="Commands\GetGameStatusCommand.cs" />
     <Compile Include="Commands\ListBetDataCommand.cs" />
