--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
@@ -64,6 +64,14 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\..\PlayerProfile\TheS.Casinova.PlayerProfile.BackServices\TheS.Casinova.PlayerProfile.BackServices.csproj">
+      <Project>{3915E024-CC99-4BBD-A79D-1E9D25CF850B}</Project>
+      <Name>TheS.Casinova.PlayerProfile.BackServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PlayerProfile\TheS.Casinova.PlayerProfile.Commands\TheS.Casinova.PlayerProfile.Commands.csproj">
+      <Project>{E1364683-30DC-4225-8185-991D5DDF4F3A}</Project>
+      <Name>TheS.Casinova.PlayerProfile.Commands</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\PlayerProfile\TheS.Casinova.PlayerProfile.Models\TheS.Casinova.PlayerProfile.Models.csproj">
       <Project>{96BBA83F-EAA6-4EEA-BEC5-98F6AC39B943}</Project>
       <Name>TheS.Casinova.PlayerProfile.Models</Name>
