--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.BackServices/TheS.Casinova.PlayerProfile.BackServices.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.BackServices/TheS.Casinova.PlayerProfile.BackServices.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BackServices\BackExecutors\ChangeEmailExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\ChangePasswordExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\RegisterUserExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\ReturnRewardExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\VerifyUserExecutor.cs" />
     <Compile Include="BackServices\IEmailSender.cs" />
     <Compile Include="BackServices\Validators\UserProfile_ChangeEmailValidators.cs" />
