--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.BackServices/TheS.Casinova.TwoWins.BackServices.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.BackServices/TheS.Casinova.TwoWins.BackServices.csproj
@@ -50,11 +50,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackServices\BackExecutors\CalculateGameRoundWinnerExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\ChangeBetExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\RangeBetExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\SingleBetExecutor.cs" />
+    <Compile Include="BackServices\Validators\BetInfo_ChangeBetValidator.cs" />
     <Compile Include="BackServices\Validators\BetInfo_SingleBetValidator.cs" />
     <Compile Include="BackServices\Validators\RangeBetInfo_RangeBetValidator.cs" />
+    <Compile Include="BackServices\Validators\RoundInfo_CalculateGameRoundWinnerValidator.cs" />
     <Compile Include="BackServices\Validators\UserProfile_ChangeBetValidator.cs" />
     <Compile Include="BackServices\Validators\UserProfile_RangeBetValidator.cs" />
     <Compile Include="BackServices\Validators\UserProfile_SingleBetValidator.cs" />
