--- a/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.BackServices.Specs/TheS.Casinova.MagicNine.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.BackServices.Specs/TheS.Casinova.MagicNine.BackServices.Specs.csproj
@@ -104,6 +104,18 @@
       <Project>{F2779163-1D6E-4E6B-B070-65B09328854A}</Project>
       <Name>TheS.Casinova.MagicNine.Models</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.BackServices\TheS.Casinova.PlayerProfile.BackServices.csproj">
+      <Project>{3915E024-CC99-4BBD-A79D-1E9D25CF850B}</Project>
+      <Name>TheS.Casinova.PlayerProfile.BackServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.Commands\TheS.Casinova.PlayerProfile.Commands.csproj">
+      <Project>{E1364683-30DC-4225-8185-991D5DDF4F3A}</Project>
+      <Name>TheS.Casinova.PlayerProfile.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.DAL.BackContracts\TheS.Casinova.PlayerProfile.DAL.BackContracts.csproj">
+      <Project>{34C38EA2-A49F-4B50-8909-A1A32848A72C}</Project>
+      <Name>TheS.Casinova.PlayerProfile.DAL.BackContracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.Models\TheS.Casinova.PlayerProfile.Models.csproj">
       <Project>{96BBA83F-EAA6-4EEA-BEC5-98F6AC39B943}</Project>
       <Name>TheS.Casinova.PlayerProfile.Models</Name>
