เสร็จสิ้นการคำนวณเงินรางวัลให้ผู้ชนะของ TwoWins
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.BackServices/TheS.Casinova.TwoWins.BackServices.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.BackServices/TheS.Casinova.TwoWins.BackServices.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BackServices\BackExecutors\CalculateGameRoundWinnerExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\ChangeBetExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\EndGameReturnRewardExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\RangeBetExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\SingleBetExecutor.cs" />
     <Compile Include="BackServices\Validators\BetInfo_ChangeBetValidator.cs" />
