ChipExchange_Module : generated voucher code finish ||เหลือปรับ feature กับการตรวจสอบ vouchercode
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Models/TheS.Casinova.ChipExchange.Models.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Models/TheS.Casinova.ChipExchange.Models.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Models\ChequeInformation.cs" />
     <Compile Include="Models\ExchangeInformation.cs" />
+    <Compile Include="Models\ExchangeInformation.md.cs" />
     <Compile Include="Models\ExchangeSetting.cs" />
     <Compile Include="Models\MultiLevelNetworkInformation.cs" />
     <Compile Include="Models\VoucherInformation.cs" />
