--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.WebExecutors/TheS.Casinova.ChipExchange.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.WebExecutors/TheS.Casinova.ChipExchange.WebExecutors.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenerateVoucherService\GenerateVoucherCodeExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\PlayerAccountInformation_MoneyToChipsValidators.cs" />
     <Compile Include="Validators\VoucherInformation_PayVoucherValidators.cs" />
     <Compile Include="Validators\VoucherInformation_VoucherToBonusChipsValidators.cs" />
     <Compile Include="WebExecutors\ChipsToBonusChipsExecutor.cs" />
