--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -172,19 +172,27 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
     <Content Include="Areas\Map\Views\Map\Index.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\BlogComment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Compare_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\DGTreeview.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\DragandDropTreeview.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\editors.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Filter.ascx" />
     <Content Include="Areas\Profile\Views\Profile\FriendList.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\Inbox.ascx" />
     <Content Include="Areas\Profile\Views\Profile\index_comment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Blog.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Index.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\newsBar.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\OptionProfile.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Photo.aspx" />
     <Content Include="Areas\Profile\Views\Profile\photocomment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Popup_Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Profile.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Report_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\AdvanceSearch.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Banners.ascx" />
@@ -328,6 +336,7 @@
     <Content Include="photocomment_dialog.html" />
     <Content Include="profile.html" />
     <Content Include="scholarship.html" />
+    <Content Include="Scripts\ajax.js" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.debug.js" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.js" />
     <Content Include="Scripts\ajaxScripts\Date.UmAlQuraCalendar.debug.js" />
@@ -538,27 +547,44 @@
     <Content Include="Scripts\ajaxScripts\MicrosoftAjaxWebServices.js" />
     <Content Include="Scripts\ajaxScripts\Start.debug.js" />
     <Content Include="Scripts\ajaxScripts\Start.js" />
+    <Content Include="Scripts\context-menu.js" />
+    <Content Include="Scripts\drag-drop-folder-tree.js" />
+    <Content Include="Scripts\ExtendedControls.debug.js" />
+    <Content Include="Scripts\ExtendedControls.js" />
+    <Content Include="Scripts\hoverIntent.js" />
     <Content Include="Scripts\JCore.js" />
     <Content Include="Scripts\jquery-1.3.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.4.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.2.min.js" />
     <Content Include="Scripts\jquery-1.4.4.min.js" />
+    <Content Include="Scripts\jquery-ui-1.7.1.custom.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.1.custom.js" />
     <Content Include="Content\jquery.hoverscroll-0.2.2.css" />
+    <Content Include="Scripts\jquery-ui-1.8.2.custom.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.6.custom.min.js" />
     <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.ad-gallery.js" />
     <Content Include="Scripts\jquery.ad-gallery.pack.js" />
     <Content Include="Scripts\jquery.autocomplete.js" />
+    <Content Include="Scripts\jquery.cleditor.min.js" />
+    <Content Include="Scripts\jquery.contextMenu.js" />
     <Content Include="Scripts\jquery.galleria.js" />
     <Content Include="Scripts\jquery.hoverscroll-0.2.2.js" />
     <Content Include="Scripts\jquery.jcarousel.min.js" />
+    <Content Include="Scripts\jquery.marquee.js" />
     <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.pager.js" />
     <Content Include="Scripts\jquery.popupWindow.js" />
     <Content Include="Scripts\jquery.tmpl.js" />
+    <Content Include="Scripts\jquery.treeview.js" />
+    <Content Include="Scripts\MooEditable.js" />
+    <Content Include="Scripts\mootools.js" />
     <Content Include="Scripts\Silverlight.js" />
+    <Content Include="Scripts\Start.debug.js" />
+    <Content Include="Scripts\Start.js" />
+    <Content Include="Scripts\superfish.js" />
+    <Content Include="Scripts\superup.js" />
     <Content Include="test.txt" />
     <Content Include="Views\Home\AboutUs.aspx" />
     <Content Include="Views\Home\AdvanceSearch.ascx" />
@@ -567,7 +593,9 @@
     <Content Include="Views\Home\FAQTutorial.aspx" />
     <Content Include="Views\Home\HightLight.aspx" />
     <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\Home\newsBar.ascx" />
     <Content Include="Views\Home\Option.aspx" />
+    <Content Include="Views\Home\StartMenu.ascx" />
     <Content Include="Views\Home\SubMenu.ascx" />
     <Content Include="Views\Home\Today.ascx" />
     <Content Include="Web.config" />
