--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Models/TheS.Casinova.ChipExchange.Models.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.Models/TheS.Casinova.ChipExchange.Models.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ChequeInformation.cs" />
+    <Compile Include="Models\ChequeInformation.md.cs" />
     <Compile Include="Models\ExchangeInformation.cs" />
     <Compile Include="Models\ExchangeInformation.md.cs" />
     <Compile Include="Models\ExchangeSetting.cs" />
