--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -73,8 +73,6 @@
     <Compile Include="Areas\KnowledgeCenter\KnowledgeCenterAreaRegistration.cs" />
     <Compile Include="Areas\Profile\ProfileAreaRegistration.cs" />
     <Compile Include="Areas\Profile\Controllers\ProfileController.cs" />
-    <Compile Include="Areas\Scholarship\Controllers\ScholarshipController.cs" />
-    <Compile Include="Areas\Scholarship\ScholarshipAreaRegistration.cs" />
     <Compile Include="Club.ClubController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -95,9 +93,6 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scholarship.ScholarshipController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="SharedController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -165,7 +160,11 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\ReportCommentVideo.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\ReportProblemVideo.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
-    <Content Include="Areas\Profile\Views\Profile\Archievement.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Archievement_Application.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Archievement_Game.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Archievement_KnowledgeCenter.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Archievement_Last.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\Archievement_Profile.aspx" />
     <Content Include="Areas\Profile\Views\Profile\BlogComment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Compare_Archeivement.ascx" />
@@ -188,14 +187,6 @@
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\AdvanceSearch.ascx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Banners.ascx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Donate.aspx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Index.aspx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Option.aspx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Recieved.aspx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\SubMenu.ascx" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Tournament.aspx" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
     <Content Include="Content\galleria.css" />
@@ -628,7 +619,6 @@
     <Content Include="Areas\Game\Views\Web.config" />
     <Content Include="Areas\KnowledgeCenter\Views\Web.config" />
     <Content Include="Areas\Profile\Views\Profile\Web.config" />
-    <Content Include="Areas\Scholarship\Views\Scholarship\Web.config" />
     <None Include="T4MVC.settings.t4" />
     <None Include="T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
