--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -136,13 +136,16 @@
     <Content Include="Areas\Game\Views\Game\Bookmark.aspx" />
     <Content Include="Areas\Game\Views\Game\CommentGame.ascx" />
     <Content Include="Areas\Game\Views\Game\Filter_InviteFriend.ascx" />
+    <Content Include="Areas\Game\Views\Game\GameFilter.ascx" />
     <Content Include="Areas\Game\Views\Game\GameOption.aspx" />
     <Content Include="Areas\Game\Views\Game\Index.aspx" />
     <Content Include="Areas\Game\Views\Game\Invite_Friend.ascx" />
     <Content Include="Areas\Game\Views\Game\NewCommentGame.ascx" />
+    <Content Include="Areas\Game\Views\Game\newsBar.ascx" />
     <Content Include="Areas\Game\Views\Game\PlayGame.aspx" />
     <Content Include="Areas\Game\Views\Game\ReportCommentGame.ascx" />
     <Content Include="Areas\Game\Views\Game\ReportProblemGame.ascx" />
+    <Content Include="Areas\Game\Views\Game\StartMenu.ascx" />
     <Content Include="Areas\Game\Views\Game\SubMenu.ascx" />
     <Content Include="Areas\Game\Views\Game\Tournament.aspx" />
     <Content Include="Areas\Game\Views\Game\Upload.ascx" />
@@ -154,12 +157,15 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\NewCommentVideo.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Index.aspx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\MyVideo.aspx" />
+    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\newsBar.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Option.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\PlayVideo.aspx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\PostNewVideos.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\ReportCommentVideo.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\ReportProblemVideo.ascx" />
+    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\StartMenu.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
+    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\VideoFilter.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement_Application.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement_Game.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement_KnowledgeCenter.aspx" />
