--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -187,8 +187,43 @@
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
+    <Content Include="Content\images\arrow_left.gif" />
+    <Content Include="Content\images\arrow_right.gif" />
+    <Content Include="Content\images\black_leopard.png" />
+    <Content Include="Content\images\calendar.png" />
+    <Content Include="Content\images\cat.png" />
+    <Content Include="Content\images\caterpillar.gif" />
+    <Content Include="Content\images\dachshund.png" />
+    <Content Include="Content\images\dog.jpg" />
+    <Content Include="Content\images\field.jpg" />
+    <Content Include="Content\images\frog.png" />
+    <Content Include="Content\images\gnome.jpg" />
+    <Content Include="Content\images\golf.jpg" />
+    <Content Include="Content\images\hard_rock_cafe.gif" />
+    <Content Include="Content\images\hedgehog.png" />
+    <Content Include="Content\images\homes.jpg" />
+    <Content Include="Content\images\home_.jpg" />
+    <Content Include="Content\images\ibm.gif" />
+    <Content Include="Content\images\k-mart.gif" />
+    <Content Include="Content\images\koala.png" />
+    <Content Include="Content\images\leaf.jpg" />
+    <Content Include="Content\images\owl.png" />
+    <Content Include="Content\images\panda.png" />
+    <Content Include="Content\images\pencils.jpg" />
+    <Content Include="Content\images\pug.png" />
+    <Content Include="Content\images\quaker_state.gif" />
+    <Content Include="Content\images\radio_shack.gif" />
+    <Content Include="Content\images\river.jpg" />
+    <Content Include="Content\images\snow_leopard.png" />
+    <Content Include="Content\images\train.jpg" />
+    <Content Include="Content\images\valvoline.gif" />
+    <Content Include="Content\jquery.simplyscroll-1.0.4.css" />
+    <Content Include="Content\smoothDivScroll.css" />
     <Content Include="Content\styles.css" />
     <Content Include="Content\superfish.css" />
+    <Content Include="Scripts\jquery.simplyscroll-1.0.4.js" />
+    <Content Include="Scripts\jquery.smoothDivScroll-1.1-min.js" />
+    <Content Include="Scripts\jquery.ui.widget.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
     <Content Include="Content\galleria.css" />
@@ -645,7 +680,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>3676</DevelopmentServerPort>
+          <DevelopmentServerPort>1375</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
