DevilSixGame: Test case finish
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.Models/TheS.Casinova.DevilSix.Models.csproj
+++ b/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.Models/TheS.Casinova.DevilSix.Models.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,11 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BetInformation.cs" />
+    <Compile Include="Models\BetInformation.md.cs" />
+    <Compile Include="Models\GamePlayAutoBetInformation.cs" />
+    <Compile Include="Models\GamePlayAutoBetInformation.md.cs" />
+    <Compile Include="Models\GameRoundInformation.cs" />
+    <Compile Include="Models\GameRoundInformation.md.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
