--- a/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.Commands/TheS.Casinova.DevilSix.Commands.csproj
+++ b/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.Commands/TheS.Casinova.DevilSix.Commands.csproj
@@ -40,11 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ListActiveGameRoundInfoCommand.cs" />
+    <Compile Include="Commands\ListBetLogCommand.cs" />
+    <Compile Include="Commands\ListGamePlayAutoBetInfoCommand.cs" />
+    <Compile Include="Commands\SingleBetCommand.cs" />
+    <Compile Include="Commands\StartAutoBetCommand.cs" />
+    <Compile Include="Commands\StopAutoBetCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
