--- a/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.WebExecutors/TheS.Casinova.DevilSix.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/DevilSix/TheS.Casinova.DevilSix.WebExecutors/TheS.Casinova.DevilSix.WebExecutors.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Advanced">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,11 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Validators\BetInformation_ListBetLogValidators.cs" />
+    <Compile Include="Validators\BetInformation_SingleBetValidators.cs" />
+    <Compile Include="Validators\GamePlayAutoBetInformation_StartAutoBetValidators.cs" />
+    <Compile Include="Validators\GamePlayAutoBetInformation_StopAutoBetValidators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\ListActiveGameRoundInfoExecutor.cs" />
+    <Compile Include="WebExecutors\ListBetLogExecutor.cs" />
+    <Compile Include="WebExecutors\ListGamePlayAutoBetInfoExecutor.cs" />
+    <Compile Include="WebExecutors\SingleBetExecutor.cs" />
+    <Compile Include="WebExecutors\StartAutoBetExecutor.cs" />
+    <Compile Include="WebExecutors\StopAutoBetExecutor.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="WebExecutors\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
