--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -187,6 +187,11 @@
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
+    <Content Include="Content\HightLight\App1.png" />
+    <Content Include="Content\HightLight\App2.png" />
+    <Content Include="Content\HightLight\App3.png" />
+    <Content Include="Content\HightLight\Cook.png" />
+    <Content Include="Content\HightLight\Math.png" />
     <Content Include="Content\images\arrow_left.gif" />
     <Content Include="Content\images\arrow_right.gif" />
     <Content Include="Content\images\banner1_thumb.jpg" />
@@ -226,6 +231,7 @@
     <Content Include="Content\TheSStarf\banner6_thumb.jpg" />
     <Content Include="Scripts\jquery.simplyscroll-1.0.4.js" />
     <Content Include="Scripts\jquery.smoothDivScroll-1.1-min.js" />
+    <Content Include="Scripts\jquery.tagosphere.js" />
     <Content Include="Scripts\jquery.ui.widget.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
