--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -196,6 +196,7 @@
     <Content Include="Content\jquery.marquee.css" />
     <Content Include="Content\styles.css" />
     <Content Include="Content\superfish.css" />
+    <Content Include="Scripts\quickpager.jquery.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
     <Content Include="Content\galleria.css" />
