Edit Game and add silverlight game
Signed-off-by: marut <>

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -616,7 +616,7 @@
     <Content Include="xap\avatar.xap" />
     <Content Include="xap\Avatar_Silver.xap" />
     <Content Include="xap\doyouknow.xap" />
-    <Content Include="xap\MayaTukkyProject.xap" />
+    <Content Include="xap\TheS.SperfGames.MayaTukky.xap" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
