--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -187,6 +187,13 @@
     <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\StartMenu.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
+    <Content Include="Content\cartoon\01.jpg" />
+    <Content Include="Content\cartoon\02.jpg" />
+    <Content Include="Content\cartoon\03.jpg" />
+    <Content Include="Content\cartoon\04.jpg" />
+    <Content Include="Content\cartoon\05.jpg" />
+    <Content Include="Content\cartoon\btn_next.gif" />
+    <Content Include="Content\cartoon\btn_prev.gif" />
     <Content Include="Content\HightLight\App1.png" />
     <Content Include="Content\HightLight\App2.png" />
     <Content Include="Content\HightLight\App3.png" />
@@ -229,10 +236,17 @@
     <Content Include="Content\TheSStarf\banner5_thumb.jpg" />
     <Content Include="Content\TheSStarf\banner6.jpg" />
     <Content Include="Content\TheSStarf\banner6_thumb.jpg" />
+    <Content Include="Content\thickbox.css" />
+    <Content Include="Scripts\easySlider1.5.js" />
+    <Content Include="Scripts\jquery-latest.js" />
+    <Content Include="Scripts\jquery.ajaxQueue.js" />
+    <Content Include="Scripts\jquery.bgiframe.min.js" />
+    <Content Include="Scripts\jquery.js" />
     <Content Include="Scripts\jquery.simplyscroll-1.0.4.js" />
     <Content Include="Scripts\jquery.smoothDivScroll-1.1-min.js" />
     <Content Include="Scripts\jquery.tagosphere.js" />
     <Content Include="Scripts\jquery.ui.widget.js" />
+    <Content Include="Scripts\thickbox-compressed.js" />
     <Content Include="uploads\TheS.wmv" />
     <Content Include="club.html" />
     <Content Include="Content\galleria.css" />
@@ -623,9 +637,9 @@
     <Content Include="Views\Home\Cartoon.ascx" />
     <Content Include="Views\Home\FAQTutorial.aspx" />
     <Content Include="Views\Home\HightLight.aspx" />
+    <Content Include="Views\Home\HomeOption.ascx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Home\newsBar.ascx" />
-    <Content Include="Views\Home\Option.aspx" />
     <Content Include="Views\Home\StartMenu.ascx" />
     <Content Include="Views\Home\SubMenu.ascx" />
     <Content Include="Views\Home\Today.ascx" />
